# po-tools-rust

./: .gitignore  Cargo.toml  README.md  TODO.md  install.sh  research.md  test.sh  Специфікація.md
.agent/workflows/: i.md  p.md  r.md  s.md  t.md
.github/workflows/: ci.yml
locales/: messages.pot  uk.po
plans/: Plan - Abstract AI Backend.md  Plan - Preserving and Stripping Comments.md
scripts/: pre-commit.sh  update-pot.sh
src/: command_check_symbols.rs  command_compare_files_and_print.rs  command_diff_by_str_and_print.rs  command_erase_and_print.rs  command_filter_with_ai_and_print.rs  command_find_same_and_print.rs  command_merge_and_print.rs  command_parse_and_dump.rs  command_print_added.rs  command_print_plural.rs  command_print_regular.rs  command_print_translated.rs  command_print_untranslated.rs  command_print_with_context.rs  command_print_with_unequal_linebreaks.rs  command_print_with_word.rs  command_print_with_wordstr.rs  command_review_files_and_print.rs  command_sort.rs  command_translate_and_print.rs  dictionary.rs  localization.rs  main.rs  parser.rs  util.rs
supply-chain/: config.toml
test-data/: memory.po  test.po  test_bom.po  test_dict.tsv
tests/: integration_tests.rs
